Service, RestController, Repositories und Scheduler angepasst